added js file and added paragrah to demo.html

--- a/Demo.html
+++ b/Demo.html
@@ -3,6 +3,7 @@
   <head>
   </head>
   <body>
-    <p>Hello World!</p>
+    <h1>Hello World!</h1>
+    <p>I've made some changes</p>
   </body>
 </html>
